--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">TicTacToe</string>
+    <string name="protocol">https://</string>
+    <string name="domain">generic-game-service.herokuapp.com</string>
+    <string name="base_path">/Game</string>
+    <string name="create_game_path">/</string>
+    <string name="join_game_path">/%1s/join</string>
+    <string name="poll_game_path">/%1s/poll</string>
+    <string name="update_game_path">/%1s/update</string>
+    <string name="game_service_key">1WlPGAGTi4</string>
 </resources>
