--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="poll_game_path">/%1s/poll</string>
     <string name="update_game_path">/%1s/update</string>
     <string name="game_service_key">1WlPGAGTi4</string>
+    <string name="tic_tac_toe">Tic Tac Toe</string>
 </resources>
